--- a/Hossaini.html
+++ b/Hossaini.html
@@ -368,10 +368,10 @@
                         See some of my awards with Jopecuro
                         with big work &passion for design.
                     </h5>
-                    <p class="mb-4">
+                    <!-- <p class="mb-4">
                         Everything that is related to develop makes part of me.
                         I enjoy the develop and programming the websites and apps, very observant!
-                    </p>
+                    </p> -->
 
                     <div style="display: flex;" class="my-2">
                         <a href="cv.jpg" class="shadow-sm">
@@ -402,7 +402,7 @@
                             <small>
                                 Appointment number:4384510226969351
                             </small>
-                            <small><a href="TOEFL.jpg">More</a></small>
+                            <small><a href="img/Hossaini/TOEFL.jpg">More</a></small>
                         </div>
                     </div>
 
@@ -495,7 +495,7 @@
                                         Admiration
                                     </em>
                                 </strong>
-                                <small><a href="img/Hossaini/woman-civil-a.jpg">More</a></small>
+                                <small><a href="img/Hossaini/wonam-civil-a.jpg">More</a></small>
                             </div>
                         </div>
 
