--- a/vision-and-mission.html
+++ b/vision-and-mission.html
@@ -174,11 +174,12 @@
                                         <div class="col-lg-12">
                                             <h4>Our Vision</h4>
                                             <p>
-                                                Our objective for each student entrusted to the
-                                                educators at Omeed Private High School is to help them
-                                                become individuals who are ready for future, with the
-                                                knowledge and abilities to compete with or lead their
-                                                peers throughout the world.
+                                                The vision of Youth Savior Socio-Cultural Foundation is to create a
+                                                society where youth are empowered and educated, and
+                                                where women and children's rights are respected and protected. The
+                                                foundation strives to promote social and cultural
+                                                awareness, civic responsibility, and environmental sustainability in the
+                                                community.
                                             </p>
                                         </div>
                                     </div>
@@ -192,20 +193,12 @@
                                 <div class="col-xl-10 col-lg-10 col-md-8 col-sm-12 text-align-justify">
                                     <h4>Our Mission</h4>
                                     <p>
-                                        To provide a curriculum that is broad, balanced, coherent,
-                                        and relevant To assist students in appreciating human
-                                        achievement in all forms: art, literature, science,
-                                        technology, and physical pursuits and in encouraging
-                                        participation in these fields as appropriate To help them
-                                        acquire the knowledge and skills that will enable them to
-                                        lead fulfilling lives at School, home, and work, through
-                                        academic and personal development opportunities. To foster
-                                        spiritual and personal development and a sense of social
-                                        responsibility. To promote tolerance in diversity. To enable
-                                        the students to gain the wisdom and accept the people of
-                                        other races, nationalities and their beliefs, cultures, and
-                                        way of life encouraging them to live in harmony. To develop
-                                        the care and concern for others in all pupils.
+                                        The mission of Youth Savior Socio-Cultural Foundation is to empower the youth
+                                        and promote education in the society
+                                        through various committees such as Education, Health, Cultural, Youth, Sports
+                                        and Environmental Committees. The
+                                        foundation aims to provide educational opportunities and capacity building
+                                        classes to young people.
                                     </p>
                                 </div>
 
